syntax = "proto3";

package linkerd2.public;

option go_package = "github.com/linkerd/linkerd2/controller/gen/public";

message Empty {}

message VersionInfo {
  string goVersion = 1;
  string buildDate = 2;
  string releaseVersion = 3;
}

service Api {
  rpc Version(Empty) returns (VersionInfo) {}
}
